fix(test): resolve test failures in SimilarProductControllerIntegrationTest
The test `testGetSimilarProducts_IntegrationFlow` failed due to a NullPointerException caused by an uninitialized `productClient`. Additionally, the test class was moved from the `service` package to the `controller` package to align with the correct package structure. The test has been updated to ensure proper initialization of dependencies and correct package declaration.