@@ -1,7 +1,6 @@
-package com.nunegal.backendDevTest.service;
+package com.nunegal.backendDevTest.controller;
 
 import com.nunegal.backendDevTest.client.ProductClient;
-import com.nunegal.backendDevTest.controller.SimilarProductController;
 import com.nunegal.backendDevTest.model.Product;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -9,6 +8,7 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.ResponseEntity;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -27,7 +27,7 @@ public class SimilarProductControllerIntegrationTest {
     public void testGetSimilarProducts_IntegrationFlow() {
         // Arrange
         String productId = "1";
-        List<Integer> ids = List.of(2, 3);
+        List<Integer> ids = Arrays.asList(2, 3);
 
         Product product1 = new Product("2", "Shirt", 9.99, true);
         Product product2 = new Product("3", "Shoes", 19.99, true);
@@ -45,4 +45,5 @@ public class SimilarProductControllerIntegrationTest {
         assertEquals("2", response.getBody().get(0).getId());
         assertEquals("3", response.getBody().get(1).getId());
     }
+
 }
